{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 21,
  "lineage": "f0844560-c366-fe6c-a8bd-752c07311468",
  "resources": [
    {
      "module": "module.autoscaling",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_first",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5bf08bc8017c83b",
            "arn": "arn:aws:ec2:us-east-2:506495533102:instance/i-00ff6835966f1e6b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ff6835966f1e6b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Line-chatbot",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07c5d56bbc8b20656",
            "private_dns": "ip-172-31-10-71.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.10.71",
            "public_dns": "ec2-18-188-231-193.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.231.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6ae493675730fef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-11e7f278",
            "tags": {
              "Name": "ec2_first"
            },
            "tags_all": {
              "Name": "ec2_first"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-4523b72d"
            ]
          },
          "dependencies": [
            "module.autoscaling.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:internet-gateway/igw-0a84d7c09ae743ba1",
            "id": "igw-0a84d7c09ae743ba1",
            "owner_id": "506495533102",
            "tags": {
              "Name": "My internet gateway"
            },
            "tags_all": {
              "Name": "My internet gateway"
            },
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:route-table/rtb-09fee18ee316a030f",
            "id": "rtb-09fee18ee316a030f",
            "owner_id": "506495533102",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a84d7c09ae743ba1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My Route table"
            },
            "tags_all": {
              "Name": "My Route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.gw",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d85446b9d3c37704",
            "route_table_id": "rtb-09fee18ee316a030f",
            "subnet_id": "subnet-0cb644700708d96b7"
          },
          "dependencies": [
            "module.networking.aws_route_table.r",
            "module.networking.aws_subnet.main",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.gw"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ae8de205480d69a",
            "route_table_id": "rtb-09fee18ee316a030f",
            "subnet_id": "subnet-077342f623ebab34d"
          },
          "dependencies": [
            "module.networking.aws_route_table.r",
            "module.networking.aws_subnet.main",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available",
            "module.networking.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:security-group/sg-0d3093948e204bc49",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3093948e204bc49",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "main_rds_sg",
            "name_prefix": "",
            "owner_id": "506495533102",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "My Security Group"
            },
            "tags_all": {
              "Name": "My Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "line-chatbot-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:subnet/subnet-07aceb888173d90af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07aceb888173d90af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506495533102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "line-chatbot-subnet2"
            },
            "tags_all": {
              "Name": "line-chatbot-subnet2"
            },
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "line-chatbot-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:subnet/subnet-02c7471ad7dbddb76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c7471ad7dbddb76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506495533102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "line-chatbot-subnet3"
            },
            "tags_all": {
              "Name": "line-chatbot-subnet3"
            },
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:subnet/subnet-0cb644700708d96b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb644700708d96b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506495533102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:subnet/subnet-077342f623ebab34d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077342f623ebab34d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506495533102",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08b3402f1e9a98147"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:506495533102:vpc/vpc-08b3402f1e9a98147",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6a410272f6f9953",
            "default_route_table_id": "rtb-0db9b693633973da6",
            "default_security_group_id": "sg-0e547bf7c32468bcf",
            "dhcp_options_id": "dopt-75979e1c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08b3402f1e9a98147",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db9b693633973da6",
            "owner_id": "506495533102",
            "tags": {
              "Name": "My VPC"
            },
            "tags_all": {
              "Name": "My VPC"
            }
          }
        }
      ]
    }
  ]
}